@startuml

skinparam monochrome true
skinparam classAttributeIconSize 0

together dataAndStatusGroup{
    class Data{
        +vGuestBook
    }

    class Status{
        +setStatus()
        +setStatusMessage()
        +getStatus()
        +getStatusMessage()
        -bExecutionStatus = true
        -spExecMessage
    }
}
class TaskQueue{
    +TaskQueue()
    +~TaskQueue()
    +clearTaskQueue()
    +addTaskToQueueByName()
    +getTaskNames()
    +isTaskQueueEmpty()
    +runTQ()
    #checkForChangingTask()
    #changeTask()
}

class Task{
    {abstract}+Task()
    #spData
    #spStatus
    {abstract}+executeTask()
    +setDataPointer()
    +setStatusPointer()
    +getTaskName()
}
class Task1{
    +executeTask()
}
class Task2{
    +executeTask()
}
class Task3{
    +executeTask()
}
class Task4{
    +executeTask()
}

Task <|-- Task1
Task <|-- Task2
Task <|-- Task3
Task <|-- Task4

TaskQueue o--> Data
TaskQueue o--> Status
TaskQueue *--> Task1
TaskQueue *--> Task2
TaskQueue *--> Task3
TaskQueue *--> Task4

TaskQueue ..> Task:<<uses>>

Data -[hidden]down- Status
TaskQueue -[hidden]right-- Data
TaskQueue -[hidden]right-- Status
@enduml